Style: Update Rank.java to Java Coding Conventions